[package]
name = "tokio-postgres-rustls-rds-demo"
version = "0.1.0"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
config = "0.10"
deadpool-postgres = "0.5"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
rustls = "0.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"
tokio-postgres-rustls = "0.4"
