[package]
name = "tokio-postgres-rustls-rds-demo"
version = "0.2.0"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
config = "0.14"
deadpool-postgres = { version = "0.13", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.5"
rustls = "0.22"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.11"
